--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -7,6 +7,10 @@
   color: #1F4D54;
 }
 
+.menu-link {
+  color: #1F4D54 !important;
+}
+
 .selected {
   color: #fff;
   background: rgba(255,255,255,0.2);
