--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -83,6 +83,14 @@
     color: #557A7F;
 }
 
+.sidebar-nav p {
+    text-indent: 20px;
+    line-height: 20px !important;
+    display: block;
+    text-decoration: none;
+    color: #557A7F;
+}
+
 .sidebar-nav li a:hover {
     text-decoration: none;
     color: #fff;
